Bug 785175: Discard column information if the script is too large instead of aborting. r=jorendorff